[tool.poetry]
name = "limehd-syslog-server"
version = "0.1.0"
description = ""
authors = ["yatmanov"]

[tool.poetry.dependencies]
python = "^3.6"
geoip2 = "^4.0.2"
aioinflux = "^0.9.0"
syslogmp = "^0.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
