[tool.poetry]
name = "limehd-syslog-server"
version = "0.1.0"
description = ""
authors = ["yatmanov"]

[tool.poetry.dependencies]
python = "^3.7"
aioinflux = "^0.9.0"
geoip2 = "^4.0.2"
syslogmp = "^0.2.2"

[tool.poetry.dev-dependencies]
faker = "^4.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
